spec: update operationId
